zeit.content.article changes
============================

3.15.8 (unreleased)
-------------------

- Nothing changed yet.


3.15.7 (2016-04-26)
-------------------

- Declare priority high for articles (ZON-2924).


3.15.6 (2016-04-20)
-------------------

- Make ``ICitation.attribution`` non-required (ZON-2962).


3.15.5 (2016-04-18)
-------------------

- Don't load Zope/UI specific ZCML in the model ZCML


3.15.4 (2016-04-15)
-------------------

- Fix styling of teaser image search button (BUG-146).


3.15.3 (2016-04-08)
-------------------

- Support separate facebook text for campus (ZON-2930).


3.15.2 (2016-04-07)
-------------------

- Add colorpicker for article teaser images (ZON-2898).


3.15.1 (2016-03-10)
-------------------

- Fix default value of infobox layout.


3.15.0 (2016-03-10)
-------------------

- Add ``layout`` to infobox block (ZON-2491).


3.14.2 (2016-03-10)
-------------------

- Improve wording (ZON-2826).


3.14.1 (2016-03-09)
-------------------

- Change ``is_instant_article`` default to False.


3.14 (2016-03-03)
-----------------

- Add a raw text module (ZON-2826).


3.13.0 (2016-02-16)
-------------------

- Support legacy ``<initial>`` paragraphs (BUG-320).


3.12.4 (2016-01-22)
-------------------

- Improve styling of social media form.


3.12.3 (2016-01-20)
-------------------

- Replace gocept.cache.method with dogpile.cache (ZON-2576).


3.12.2 (2015-12-17)
-------------------

- Update to zeit.push separating facebook texts (ZON-2397).


3.12.1 (2015-12-16)
-------------------

- Set instant_article default to true (ZON-2476).


3.12.0 (2015-12-02)
-------------------

- Add fields ``is_instant_article`` and ``is_amp`` (ZON-2476)


3.11.0 (2015-11-12)
-------------------

- Add block for referencing a quiz (ZON-2396).


3.10.1 (2015-10-29)
-------------------

- Simplify editor heading CSS, and make it apply to editor only (DEV-951).


3.10.0 (2015-09-12)
-------------------
