@@ -94,7 +94,7 @@ class ArticleContentMainImage(zeit.edit.browser.form.InlineForm):
     prefix = 'article-content-main-image'
     undo_description = _('edit article content main image')
     form_fields = FormFields(IArticle).select(
-        'main_image', 'main_image_layout')
+        'main_image', 'main_image_display_mode', 'main_image_variant_name')
 
     def __call__(self):
         zope.interface.alsoProvides(
