@@ -11,13 +11,65 @@ import zeit.edit.interfaces
 import zope.lifecycleevent
 
 
+# Required for backward compatibility, since the `layout` setting did contain a
+# combination of `display_mode` and `variant_name`.
+LAYOUT_DISPLAY_MODE_MAPPING = {
+    'column-width': 'column-width',
+    'column-width-original': 'column-width',
+    'column-width-portrait': 'column-width',
+    'column-width-square': 'column-width',
+    'float-portrait': 'float',
+    'float-square': 'float',
+    'large': 'large',
+    'portrait': 'float',
+    'small': 'float',
+    'zco-portrait': 'large',
+    'zco-wide': 'large',
+}
+
+
+# Required for backward compatibility, since the `layout` setting did contain a
+# combination of `display_mode` and `variant_name`.
+LAYOUT_VARIANT_NAME_MAPPING = {
+    'column-width': 'wide',
+    'column-width-original': 'original',
+    'column-width-portrait': 'portrait',
+    'column-width-square': 'square',
+    'float-portrait': 'portrait',
+    'float-square': 'square',
+    'large': 'wide',
+    'portrait': 'original',
+    'small': 'wide',
+    'zco-portrait': 'portrait',
+    'zco-wide': 'wide',
+    'zmo-large-center': 'wide',
+    'zmo-medium-center': 'wide',
+    'zmo-medium-left': 'wide',
+    'zmo-medium-right': 'wide',
+    'zmo-narrow-header': 'narrow',
+    'zmo-portrait-header': 'portrait',
+    'zmo-small-left': 'portrait',
+    'zmo-small-left-original': 'original',
+    'zmo-small-right': 'portrait',
+    'zmo-small-right-original': 'original',
+    'zmo-square-header': 'square',
+    'zmo-standard-header': 'standard',
+    'zmo-super-header': 'super',
+    'zmo-tile-header': 'tile',
+    'zmo-wide-header': 'wide',
+    'zmo-xl': 'super',
+    'zmo-xl-header': 'original',
+}
+
+
 class ImageReferenceProperty(
         zeit.cms.content.reference.SingleReferenceProperty):
 
     def __set__(self, instance, value):
         saved_attributes = {name: getattr(instance, name) for name in [
             '__name__',
-            'layout',
+            'display_mode',
+            'variant_name',
             'set_manually',
         ]}
 
@@ -31,14 +83,16 @@ class ImageReferenceProperty(
 
 class Image(zeit.content.article.edit.reference.Reference):
 
-    grokcore.component.implements(
-        zeit.content.article.edit.interfaces.IImage)
+    grokcore.component.implements(zeit.content.article.edit.interfaces.IImage)
     type = 'image'
 
     references = ImageReferenceProperty('.', 'image')
 
-    _layout = zeit.cms.content.property.ObjectPathAttributeProperty(
-        '.', 'layout')
+    _display_mode = zeit.cms.content.property.ObjectPathAttributeProperty(
+        '.', 'display_mode')
+
+    _variant_name = zeit.cms.content.property.ObjectPathAttributeProperty(
+        '.', 'variant_name')
 
     # XXX this is a stopgap to fix #11730. The proper solution involves
     # a real Reference object, see #10686.
@@ -48,20 +102,44 @@ class Image(zeit.content.article.edit.reference.Reference):
 
     def __init__(self, *args, **kw):
         super(Image, self).__init__(*args, **kw)
-        if self.layout is None:
-            self.layout = zeit.content.article.edit.interfaces.IImage[
-                'layout'].default
+        if self._display_mode is None:
+            self.display_mode = self.display_mode
+        if self._variant_name is None:
+            self.variant_name = self.variant_name
 
     @property
-    def layout(self):
-        source = zeit.content.article.edit.interfaces.IImage['layout'].source(
-            self)
-        return source.find(self._layout)
+    def display_mode(self):
+        if self._display_mode is not None:
+            return self._display_mode
 
-    @layout.setter
-    def layout(self, layout):
-        self._p_changed = True
-        self._layout = layout.id
+        # backward compatibility by mapping old layout to display_mode
+        layout = self.xml.get('layout', None)
+        if layout in LAYOUT_DISPLAY_MODE_MAPPING:
+            return LAYOUT_DISPLAY_MODE_MAPPING[layout]
+
+        return zeit.content.article.edit.interfaces.IImage[
+            'display_mode'].default
+
+    @display_mode.setter
+    def display_mode(self, value):
+        self._display_mode = value
+
+    @property
+    def variant_name(self):
+        if self._variant_name is not None:
+            return self._variant_name
+
+        # backward compatibility by mapping old layout to display_mode
+        layout = self.xml.get('layout', None)
+        if layout in LAYOUT_VARIANT_NAME_MAPPING:
+            return LAYOUT_VARIANT_NAME_MAPPING[layout]
+
+        return zeit.content.article.edit.interfaces.IImage[
+            'variant_name'].default
+
+    @variant_name.setter
+    def variant_name(self, value):
+        self._variant_name = value
 
 
 class Factory(zeit.content.article.edit.reference.ReferenceFactory):
