@@ -22,7 +22,8 @@ product_config = """
     cds-import-invalid-path cds/invalid/$$year/$$volume
     book-recension-categories file://{base}/tests/recension_categories.xml
     genre-url file://{base}/tests/article-genres.xml
-    image-layout-source file://{base}/edit/tests/image-layouts.xml
+    image-display-mode-source file://{base}/edit/tests/image-display-modes.xml
+    image-variant-name-source file://{base}/edit/tests/image-variant-names.xml
     video-layout-source file://{base}/edit/tests/video-layouts.xml
     htmlblock-layout-source file://{base}/edit/tests/htmlblock-layouts.xml
     infobox-layout-source file://{base}/edit/tests/infobox-layouts.xml
